Bug 718157 - Fix dynamic changes of percentage text-indent when the parent's size changes and the element's size does not.  r=jfkthame

This code needs to move out of PrepareResizeReflow() (and things that
trigger code in it) because PrepareResizeReflow is conditioned on the
block itself resizing.

The reftest is based on a test by Jesse Ruderman <jruderman@gmail.com>.

The reftest fails without the patch and passes with the patch.